--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/intansemc2/Learn-Use-Express-Js#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "lowdb": "^1.0.0",
     "pug": "^2.0.4"
   }
 }
